<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Dp_px_Activity" >

    <TextView
        android:id="@+id/px"
        android:layout_width="wrap_content"
        android:layout_height="100px"
        android:background="#ff0000"
        android:text="@string/px" />

    <TextView
        android:id="@+id/dp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="#00ff00"
        android:text="@string/dp1" />

    <TextView
        android:id="@+id/ppi"
        android:layout_width="wrap_content"
        android:layout_height="32.65dp"
        android:background="#0000ff"
        android:text="@string/dp2" />

</LinearLayout>