<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<!-- 此处需要给出全路径 -->
	<android.support.v4.view.ViewPager
		android:id="@+id/viewpagerLayout1" android:layout_height="fill_parent"
		android:layout_width="fill_parent" />
	<ImageView 
	    android:id="@+id/img"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:src="@drawable/p1"
	    android:layout_alignParentBottom="true"/>

	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_toRightOf="@id/img" >

	    <Button
	        android:id="@+id/btn1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="onclick"
	        android:text="@string/pageone" />

	    <Button
	        android:id="@+id/btn2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="onclick"
	        android:text="@string/pagetwo" />

	    <Button
	        android:id="@+id/btn3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="onclick"
	        android:text="@string/pagethree" />

	</LinearLayout>
	
</RelativeLayout>